Add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -125,7 +125,25 @@
         </div>
     </section>
     <footer>
-        Social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="visit our Twitter page(opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="visit our Youtube page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="visit our Instagram page(opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></i></a>
+            </li>
+        </ul>
     </footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/30bb1d9789.js" crossorigin="anonymous"></script>
